src/objects/CAD__c.object
<CustomObject>
    <fields>
        <fullName>CADKey__c</fullName>
        <externalId>true</externalId>
        <label>CADKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactKey__c</fullName>
        <externalId>true</externalId>
        <label>ContactKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CourseKey__c</fullName>
        <externalId>true</externalId>
        <label>CourseKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>CADS</relationshipLabel>
        <relationshipName>CADS</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Fee__c</fullName>
        <label>Estimated Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Reduction_Percentage__c</fullName>
        <label>Fee Reduction Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSA Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practitioner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CADS</relationshipLabel>
        <relationshipName>CADS</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signed_Date__c</fullName>
        <label>Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Fee__c</fullName>
        <formula>Estimated_Fee__c  * (1 - Fee_Reduction_Percentage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CAD</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>